# ruflo-multiagent-swarm

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml
deploy/: Dockerfile  README.txt  compose.yaml
deploy/k8s/: ruflo-api.yaml
ruflo/: __init__.py  __main__.py  api.py  cli.py  mcp.py
ruflo/agents/: __init__.py  architect.py  backend.py  base.py  database.py  deployment.py  frontend.py  planner.py  reviewer.py  security.py
ruflo/core/: __init__.py  context.py  dag.py  orchestrator.py
ruflo/distributed/: __init__.py  pool.py
ruflo/governance/: __init__.py  budget.py  critic.py  features.py
ruflo/llm/: __init__.py  router.py
ruflo/memory/: __init__.py  graph.py
ruflo/observability/: __init__.py  tracing.py
ruflo/runtime/: __init__.py  sandbox.py
ruflo/scheduler/: __init__.py  gpu.py
ruflo/webui/: app.js  index.html  styles.css
