[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruflo-multiagent-swarm"
version = "0.1.0"
description = "Distributed Multi-LLM Agentic SDLC Platform inspired by Ruflo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ruflo Swarm Contributors" }]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "networkx>=3.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5"]
ray = ["ray>=2.10"]
neo4j = ["neo4j>=5.18"]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.25"]
dev = ["ruff>=0.4"]

[project.scripts]
ruflo = "ruflo.cli:app"

[tool.setuptools.packages.find]
include = ["ruflo*"]


